For 1.20.2
	- OSX running within Safari; speaking error messages sometimes hung safari; use
	  "freewrlSystem" call now, instead of "system" - seems to work well. Messages
	  also copied to the console.

	- Nodes with a "bindTime" outputOnly were not sending events correctly; fixed.

	- VRML/Classic - using SF* datatypes where MF* types were expected could lead to
	  invalid data being used - fixed.

	- OSX - use QuickTime/Quartz for image loading, rather than libraries supplied
	  in FeeeWRL dmg package.
 
	- Linux: XLib errors limited to 20; more than that FreeWRL exits. (ideally, no
	  XLib errors would occur; this is just to help in case of failures elsewhere)

For 1.20.1
	- Midi nodes - pan values were reversed. Fixed.

	- polyrep collision with high NavigationInfo speed not working 100%; some changes
	  made, but code still needs debugging.

	- "Sensitive" nature of sensitive nodes would flow up the scenegraph too far, now
	  code verifies that sensitive nodes are indeed registered; branches above sensitive
	  nodes ignored.

	- Collision equations for collision with Polyreps improved by having a quick check
	  to reduce testing on all triangles of distant shapes.

	- Frustum culling was not working on OSX computers - differences in OpenGL headers
	  between Linux and OSX; a #ifdef AQUA added to differentiate.

	- EAI/SAI changes for VRML parser - keep DEFines around between calls of cParse.

	- possible threading issue fixed whereby a script can be called in Routing before parsing has
	  initialized it.

For 1.20.0 (Some came out with 1.19.9 for Linux):
	- Routing to SFImages was broken - tests/Javascript/SFImage.wrl works with new parser.

	- Classic parser - refactor DEF and USE within MF* fields.

	- Linux Sound - changed the maximum number of concurrent sound files to 128.

	- PROTO expansion for SFNodes verified.

	- KeySensor and StringSensor written and tested on OSX and Linux.

	- Javascript SFString events were calling an incorrect Javascript call;